# Physics-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  getHeaders.sh  imgui.ini  temp.txt
EngineIncludes/: entity.h  entity.inl  mathFuncs.h
EngineIncludes/Engine/: engine.h  engineConstants.h  sharedData.h
EngineIncludes/FileLoader/: fileLoader.h
EngineIncludes/Objects/: polygon.h
EngineIncludes/Physics/: collisionSolver.h  polygonCollider.h  polygonRigidbody.h  ray.h  spatialHashGrid.h
EngineIncludes/Sound/: audioClip.h  audioPlayer.h
headers/include/: entity.h  entity.inl
headers/include/Engine/: setup.h  sharedData.h
headers/include/FileLoader/: fileLoader.h  objDataLoader.h  wavFile.h
headers/include/ImguiImplementation/: imguiInitialize.h
headers/include/Objects/: polygon.h
headers/include/Physics/: ray.h  spatialHashGrid.h
headers/include/Sound/: audioManager.h
headers/include/camera/: camera2D.h
headers/include/glad/: glad.h
include/: entity.cpp  entity.h  entity.inl  mathFuncs.cpp  mathFuncs.h  setup.h  sharedData.cpp
include/Controllers/: platformerPlayer.h
include/Engine/: engine.cpp  engine.h  inputHandler.cpp  inputHandler.h  sharedData.cpp  sharedData.h
include/FileLoader/: fileLoader.cpp  fileLoader.h  objDataLoader.cpp  objDataLoader.h  tgaLoader.cpp  wavFile.cpp  wavFile.h
include/ImguiImplementation/: imguiInitialize.cpp  imguiInitialize.h
include/ModelImport/: mesh.h  model.h
include/Objects/: point.cpp  point.h  polygon.cpp  polygon.h  rectangle.h
include/Physics/: collisionSolver.cpp  collisionSolver.h  polygonCollider.cpp  polygonCollider.h  polygonRigidbody.cpp  polygonRigidbody.h  ray.cpp  ray.h  rayData.h  rectangleCollider.h  rectangleRigidbody.h  spatialHashGrid.cpp  spatialHashGrid.h
include/Rendering/: texture.cpp  texture.h
include/Scripting/: baseScript.h
include/Shader/: shader.cpp  shader.h
include/Sound/: audioClip.cpp  audioLinkedList.cpp  audioLinkedList.h  audioManager.cpp  audioPlayer.cpp
include/camera/: camera2D.h  flyCam.h
include/glad/: glad.h
include/glm/: main.cpp
include/imgui/: imguiInitialize.h
lib/: libsoundio.2.0.0.dylib
shaders/: gravityFShader.glsl  gravityVShader.glsl  pointVShader.glsl  rayVShader.glsl
src/: a.py  collisionResolution.cpp  collisions  collisions.cpp  collisionsObjectData.txt  collisionstest  collisionstest.cpp  friction.cpp  glad.c  imgui.ini  oldCollisionResolution.cpp  platformer.cpp  playerScripts.h  render  render.cpp  settingsSynchronizer.py  test.cpp
src/Implementations/: camera2D.cpp  entity.cpp  fileLoader.cpp  imguiInitialize.cpp  objDataLoader.cpp  polygon.cpp  polygonCollider.cpp  ray.cpp  shader.cpp  sharedData.cpp  spatialHashGrid.cpp
src/collisions.dSYM/Contents/: Info.plist
src/collisions.dSYM/Contents/Resources/DWARF/: collisions
src/collisionstest.dSYM/Contents/: Info.plist
src/collisionstest.dSYM/Contents/Resources/DWARF/: collisionstest
src/render.dSYM/Contents/Resources/DWARF/: render
